pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: appgrupo2  
  namespace: grupo2ara
spec:
  containers:
    - name: appgrupo2
      image: hashicorp/http-echo
      args: ["-text", "Grupo 2"]
      ports:
        - name: web
          containerPort: 5678
          protocol: TCP
