service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appservice
spec:
  selector:
    app: grupo2deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
